<?xml version="1.0"?>
<package>
  <name>genmsg</name>
  <version>0.4.8</version>
  <description>Generator infrastructure for ROS messages.</description>
  <maintainer email="dthomas@willowgarage.com">Dirk Thomas</maintainer>
  <license>BSD</license>

  <url type="website">http://www.ros.org/wiki/genmsg</url>
  <url type="bugtracker">https://github.com/ros/genmsg/issues</url>
  <url type="repository">https://github.com/ros/genmsg</url>

  <author>Troy Straszheim</author>
  <author>Morten Kjaergaard</author>
  <author>Ken Conley</author>

  <build_depend>catkin</build_depend>
</package>
